<resources>
    <string name="app_name">SamataElev</string>
    <string name="user_type_user_employee">User Type (user/employee)\n</string>
    <string name="password">Enter password\n</string>
    <string name="email">Enter Email\n</string>
    <string name="register_a">Register\n</string>
    <string name="email_login">Enter Email\n</string>
    <string name="password_login">Enter password\n</string>
    <string name="login_l">Login\n</string>
    <string name="register">Register\n</string>
    <string name="login">Login</string>
    <string name="user_type">User Type</string>
    <string name="delete">Delete</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tasks</string>
    <string name="menu_gallery">Announcements</string>
    <string name="menu_slideshow">Attendance</string>
    <string name="sample_task_name">Sample Task Name</string>
    <string name="task_description">Task Description:</string>
    <string name="sample_task_description">Sample Task Description</string>
    <string name="due_date">Due Date:</string>
    <string name="_01_jan_2025">01 Jan 2025</string>
    <string name="assigned_to_email">Assigned to Email:</string>
    <string name="user_example_com">user@example.com</string>
    <string name="document_uri">Document URI:</string>
    <string name="http_example_com_document_pdf">http://example.com/document.pdf</string>
    <string name="document_preview">Document Preview:</string>
    <string name="task_name">Task Name:</string>
    <string name="submit">Button</string>
</resources>